ProjetCompil/Verif/Test/fail/for2.cas
program
	B : real;
	A : 1..14;
begin
	for A := B to 20 do 
      		null ; 
  	end ; 
	
end.
	